<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LL_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LL_radio_img"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50">

            <RadioButton
                android:id="@+id/radiobtn_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:text="@string/rdbtn_guerrier"/>

            <RadioButton
                android:id="@+id/radiobtn_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:checked="true"
                android:text="@string/rdbtn_mage"/>
        </RadioGroup>
        
        <ImageView
            android:id="@+id/img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:contentDescription="@string/img_description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:layout_margin="1dp"
            android:text="@string/btn_sauvegarder" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:layout_margin="1dp"
            android:text="@string/btn_nouveau" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:layout_margin="1dp"
            android:text="@string/btn_reinitialiser" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/ckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/chkbox_txt"/>


    <ScrollView
        android:id="@+id/scrollview_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LL_stat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_nom"/>
            <EditText
                android:id="@+id/editTxt_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="Gerard" />

            <TextView
                android:id="@+id/txt_classe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_classe"/>
            <EditText
                android:id="@+id/editTxt_classe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <Switch
                android:id="@+id/switch_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_pv"/>
            <EditText
                android:id="@+id/editTxt_pv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:id="@+id/txt_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_ca"/>
            <EditText
                android:id="@+id/editTxt_ca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <TextView
                android:id="@+id/txt_dmg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_dmg"/>
            <EditText
                android:id="@+id/editTxt_dmg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <TextView
                android:id="@+id/txt_pdm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_point_de_magie"/>
            <EditText
                android:id="@+id/editTxt_pdm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>